--- a/fe/src/components/Chat.css
+++ b/fe/src/components/Chat.css
@@ -28,3 +28,29 @@ header {
     display: block;
     height: 140px;
 }
+
+.message-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.message-box {
+  background-color: #f1f1f1;
+  padding: 10px 15px;
+  border-radius: 12px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.message-box p {
+  margin: 0;
+  color: #000;
+  font-size: 16px;
+}
